@@ -1,5 +1,7 @@
 HEAD
 	+ Fixed 'routers' option when gateway is set to 'none'
+	+ Object members without a valid hostname are no longer used as
+	  fixed addresses
 2.0.4
 	+ Bugfix: dhcp module never fail to save changes when a change
 	  in network interface is done
